--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,6 +33,9 @@ jobs:
         pip install -r requirements.txt
     - name: Build package
       run: python -m build
+    - name: Deploy
+      run: |
+        python -m twine upload dist/* -u __token__ -p ${{ secrets.TOKEN }}
     # - name: Publish package
     #   uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
     #   with:
