--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,12 +32,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Build package
-      run: python -m build
+      run: |
+        rm -fr dist/*
+        python -m build
     - name: Deploy
       run: |
         python -m twine upload dist/* -u __token__ -p ${{ secrets.TOKEN }}
-    # - name: Publish package
-    #   uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-    #   with:
-    #     user: __token__
-    #     password: ${{ secrets.PYPI_API_TOKEN }}
