add silent mode and add build notification

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,6 +31,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Notification for build detail
+      run: |
+        python -m xethhung12_tg_msg --receiver-id ${{ secrets.RECEIVER_ID }} --bot-token ${{ secrets.BOT_TOKEN }} --msg \
+          "build xethhung12_tg_msg start"
+
     - name: Build package
       run: |
         rm -fr dist/*
@@ -38,3 +43,7 @@ jobs:
     - name: Deploy
       run: |
         python -m twine upload dist/* -u __token__ -p ${{ secrets.TOKEN }}
+    - name: Notification for build detail
+      run: |
+        python -m xethhung12_tg_msg --receiver-id ${{ secrets.RECEIVER_ID }} --bot-token ${{ secrets.BOT_TOKEN }} --msg \
+          "build xethhung12_tg_msg done"
